# dig-nat

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  DEVELOPMENT_LOG.md  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml
src/: accept.rs  cert_binding.rs  config.rs  dialer.rs  error.rs  fast_connect.rs  identity.rs  lib.rs  mtls.rs  mux.rs  peer.rs  relay.rs  relay_descriptor.rs  relayed_dial_tests.rs  runtime.rs  strategy.rs  stun.rs  tunnel.rs  wire.rs
src/method/: direct.rs  hole_punch.rs  mod.rs  natpmp.rs  pcp.rs  relayed.rs  upnp.rs
tests/: address_family.rs  connect.rs  connect_ladder.rs  dial_family.rs  dialer.rs  happy_eyeballs.rs  identity.rs  local_ipv6.rs  methods.rs  mtls.rs  mux.rs  natpmp.rs  pcp.rs  peer_passthrough.rs  reflexive.rs  relay.rs  relayed_transport.rs  socket_io.rs  strategy.rs  stun.rs  wire_conformance.rs
tests/tls_harness/: mod.rs
