# dig-nat — abstract NAT traversal for DIG Node peer connections.
#
# One `connect(peer)` API establishes a mutually-authenticated (mTLS) peer connection using the
# best available traversal method, transparently, with `relay.dig.net` as the LAST-RESORT fallback.
# The caller never chooses the method.
#
# Dependency philosophy (mirrors the ecosystem's dig-relay / dig-node vendoring rationale):
# the small, well-specified NAT datagrams (NAT-PMP RFC 6886, PCP RFC 6887, STUN RFC 5389) are
# implemented DIRECTLY here — they are tiny fixed-layout packets, so implementing them keeps the
# dependency tree small AND makes every byte unit-testable against the RFC layout with NO real
# network. UPnP/IGD (SSDP discovery + SOAP) is the one genuinely large protocol, so we use the
# maintained `igd-next` crate for the live gateway call, behind the same `TraversalMethod` trait as
# the others so the ordering/fallback strategy is tested with mock methods regardless.
[package]
name = "dig-nat"
version = "0.11.0"
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0 OR MIT"
description = "Abstract NAT traversal for DIG Node peer connections — one connect() API over direct, UPnP/IGD, NAT-PMP, PCP, relay-coordinated hole-punch, and relay.dig.net as last-resort fallback; establishes an mTLS peer connection with peer_id = SHA256(TLS SPKI DER)."
repository = "https://github.com/DIG-Network/dig-nat"
readme = "README.md"
keywords = ["nat", "traversal", "p2p", "stun", "dig"]
categories = ["network-programming"]

[dependencies]
# Canonical relay endpoint: `dig_constants::DIG_RELAY_URL` (wss://relay.dig.net:443) is the single
# source of truth dig-nat uses to reach `relay.dig.net`. Sourced from the crates.io release.
# VERSION REQ: `>=0.4, <0.6` spans the additive 0.4.x and 0.5.x lines (nothing dig-nat depends on
# changed across them) while guarding against a future breaking 0.6; it resolves to the latest
# published 0.5.x on crates.io.
dig-constants = { version = ">=0.4, <0.6" }

# The CANONICAL DIG peer mTLS crate (L00): the shipped public DigNetwork CA, per-peer `NodeCert`
# (CA-signed leaf carrying the #1204 BLS-G1 binding), `peer_id = SHA-256(TLS SPKI DER)`, the ready
# rustls mutual-auth `client_config`/`server_config`, and the binding verify + `BindingPolicy`.
# dig-nat CONSUMES all of this instead of hand-rolling cert generation / mTLS config / the binding /
# peer_id (deleted in 0.6.0), so there is exactly ONE implementation of the DIG cert model and no
# byte-drift risk. dig-tls is L00, so dig-nat (L10) → dig-tls is a valid reference-DOWN edge.
dig-tls = { version = "0.3" }

# The node/relay BLS12-381 G1 identity primitives (dig-identity slot 0x0010, EIP-2333 path
# m/12381'/8444'/9'/0'): `sign_message`/`verify_signature` (BLS G2 over the AugScheme),
# `g1_subgroup_check`, `public_key_bytes`. Still needed by `relay_descriptor.rs` to verify signed
# relay descriptors (#1204/#1199), AND by the cross-crate conformance test that pins dig-tls's binding
# BLS derivation byte-identical to dig-identity's (the check dig-tls's `bls.rs` doc-comment defers to
# this integration level). The cert-binding + peer_id use of dig-identity moved to dig-tls.
dig-identity = { version = ">=0.4.1, <0.5" }

# The ecosystem's single, canonical address-family discovery + IPv6-first happy-eyeballs dial
# (CLAUDE.md §5.2). dig-nat is the FIRST consumer: `MtlsDialer::dial` builds a `dig_ip::PeerCandidates`
# from the traversal outcome and calls `dig_ip::connect`, so the local∩peer family INTERSECTION and
# the RFC-8305 racer live in ONE place instead of being hand-rolled here. See `dig-ip`'s `SPEC.md`.
dig-ip = "0.1"

# Async runtime + networking (UDP for NAT-PMP/PCP/STUN, TCP for direct/mTLS).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
async-trait = "0.1"

# Relay transport: JSON RelayMessage wire over a (secure) WebSocket.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Efficient byte-array (de)serialization for RangeFrame ciphertext payloads.
serde_bytes = "0.11"

# Stream multiplexing over the single mTLS byte stream: many cheap concurrent logical streams
# (no head-of-line blocking) so several transfers — e.g. different byte ranges of a resource — run
# at once to the same peer. `yamux` is the canonical maintained Rust mux; it runs over any
# futures `AsyncRead + AsyncWrite`, so we bridge the tokio mTLS stream with `tokio-util`'s compat.
yamux = "0.13"
tokio-util = { version = "0.7", features = ["compat"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Lock-free atomic swap of the current transport slot for fast-connect's live relayed→direct
# promotion: `open_stream` loads the active transport and promotion atomically stores the new one,
# so NEW streams route to the promoted transport while in-flight streams drain on the old one (no
# reader/writer blocking on a swap).
arc-swap = "1"

# mTLS transport plumbing. The rustls mutual-auth CONFIGS (with peer_id pinning + BLS binding) come
# ready-made from `dig_tls::{client_config, server_config}`; dig-nat only needs the connector/acceptor
# to run the handshake over the raced TCP stream, and `rustls-pki-types` for the placeholder SNI.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pki-types = "1"
# CSPRNG for STUN transaction ids (RFC 5389 §10.1) and PCP MAP nonces (RFC 6887 §11.1) — both are
# the sole anti-spoof check on their respective UDP responses and MUST be unpredictable, not derived
# from wall-clock time. dig-nat calls `ring::rand::SystemRandom` directly.
ring = "0.17"
# SHA-256 for the signed relay-descriptor digest (`relay_descriptor.rs`).
sha2 = "0.10"

# UPnP/IGD port mapping — the one large protocol we don't hand-roll. `igd-next` is the maintained
# fork of `igd`; its live SSDP+SOAP call sits behind the `TraversalMethod` trait.
igd-next = { version = "0.17", features = ["aio_tokio"] }

# Structured errors + observability.
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
# Loopback relay + fake IGD + mock methods drive the tests entirely in-process (no real network).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "test-util"] }
tokio-tungstenite = "0.24"
# The loopback mTLS tests build a real server config from a `NodeCert` and run the handshake.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pki-types = "1"
# The identity/peer_id tests hash SPKI DER directly to pin the derivation.
sha2 = "0.10"
# The #1422 self-signed-peer dial test mints a throwaway FOREIGN CA + signs a leaf at an explicit
# issuance time via `dig_tls::ca` + `NodeCert::generate_signed_by`, which take an `OffsetDateTime`.
time = "0.3"

[profile.release]
overflow-checks = true
